# dbhub

./: .gitignore  CLAUDE.md  Cargo.toml  Cargo.toml.orig  LICENSE  Makefile  README.md  README.zh.md
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: cli.rs  display.rs  main.rs  match.rs
configs/: sample.yml
core/: Cargo.toml
core/configs/: sample.yml
core/scripts/: placeholder.lua
core/src/: cli.rs  config.rs  lib.rs  template.rs  tools.rs
core/src/connection/: command.rs  executor.rs  lua.rs  mod.rs
docs/: config-auto-scan.md
gui/: Cargo.toml  README.md  tauri.conf.json
gui/capabilities/: default.json
gui/icons/: README.md  appicon.icns  dbhub.icns
gui/public/: index.html  main.js  manage.html  manage.js
gui/public/styles/: common.css  manage.css
gui/src/: commands.rs  lib.rs  main.rs  menu.rs  tray.rs
gui/src-ui/: about.html  about.js  index.html  main.js  menu.js
gui/src-ui/dialogs/: config-editor.html  config-editor.js  context-manager.html  context-manager.js
gui/src-ui/js/: init-dialog.js
gui/src-ui/styles/: about.css  dialogs.css  macos.css
scripts/: build-app.sh  create-icon.sh  generate-zsh-completion.sh  install-completion.sh  memcached.lua  mongo.lua  mysql.lua  redis-sentinel.lua  redis.lua  sample.lua  test-completion.sh
src/: cli.rs  config.rs  embedded.rs  main.rs  template.rs  tools.rs
