[package]
name = "dbhub"
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
shell-words = "1.1.0"
which = "8.0.0"
color-eyre = "0.6"
dirs = "6.0.0"
regex = "1.10.4"
console = "0.15"
mlua = { version = "0.10.5", features = ["lua54"] }
rust-embed = { version = "8.7.2", features = ["debug-embed"] }
