[package]
name = "dbhub"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = """A CLI tool to manage your multi-environment database configurations"""

[[bin]]
name = "dbhub"
path = "src/main.rs"

[dependencies]
dbhub-core = { path = "../core" }
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
color-eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }