[package]
name = "dbhub-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MacOS menu bar GUI for DB Hub"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
dbhub-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
dirs = { workspace = true }
